# llm-finetuning

./: .env.example  .gitignore  README.md  finetuning.ipynb  pyproject.toml  requirements.txt
src/: prompts.yaml  utils.py
src/core/: settings.py
src/core/training/: common.py  cpt.py  ift.py  training_config.yaml
src/get_training_data/: common.py  cuad_data.py  instruction_finetuning_data.py  pretraining_data.py
src/training_data_prep/: common.py  instruction_finetuning_data.py
training_data/cpt_data/train/: data-00000-of-00001.arrow  state.json
training_data/cpt_data/val/: data-00000-of-00001.arrow  state.json
training_data/instruction_ft_data/contracts/: data-00000-of-00001.arrow  dataset_info.json  state.json
training_data/instruction_ft_data/qna/: batch_input.jsonl
training_data/instruction_ft_data/qna/batch_results/: data-00000-of-00001.arrow  dataset_info.json  state.json
training_data/instruction_ft_data/summaries_and_entities/: dataset_info.json  state.json
training_data/instruction_ft_data/summarization/: batch_input.jsonl
training_data/instruction_ft_data/summarization/batch_results/: data-00000-of-00001.arrow  dataset_info.json  state.json
